@@ -1,5 +1,9 @@
 =encoding UTF-8
 
+=head1 NAME
+
+AUTHORS - Authors of and contributors to PostScript-Barcode
+
 =over
 
 =item Lars Dɪᴇᴄᴋᴏᴡ C<< <daxim@cpan.org> >>
