@@ -1,6 +1,11 @@
 =encoding UTF-8
 
-Alien-BWIPP version 0.003 is Copyright © 2009, Lars Dɪᴇᴄᴋᴏᴡ
+Alien-BWIPP version 0.004 is Copyright © 2009, Lars Dɪᴇᴄᴋᴏᴡ
+
+=head1 NAME
+
+README - basic information for users prior to downloading
+
 
 =head1 INSTALLATION
 
@@ -26,7 +31,7 @@ L<perlfaq8/"How do I add a directory to my include path (@INC) at runtime?">.
 
 =head2 Configure time
 
-Perl 5.10, L<Module::Build> >= 0.35_02
+Perl 5.10, L<Module::Build> >= 0.35_14
 
 =head2 Run time
 
