@@ -14,14 +14,14 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 eeea3455c8ae0efecc06246aeb0958b4777053b9 AUTHORS
-SHA1 ff63bf59eb523a01bc6c8b03a9cad52d794f48a5 Build.PL
-SHA1 d0bd9bc90d03ba064aa08c6700ab96050df3881a Changes
+SHA1 f47583871ceeb8874f42db482d350175b1fc3e04 AUTHORS
+SHA1 95c551748317261f4afdbc5c55b8feab8a5efb57 Build.PL
+SHA1 26f469ccc9568faf49f1065dfb58d79c8ccc699e Changes
 SHA1 2efd64b5c8ad96d032cfd3010420a2ac2c06e4a6 MANIFEST
 SHA1 6bec347e8c5b2f364c6a22b120efe7aa9a6143ae MANIFEST.SKIP
-SHA1 930f9e69b7f4ddacc743a1831b86aba46f03bac8 META.yml
-SHA1 6868d609a04b6f01500b98cff3e5eb272fe585c4 README
-SHA1 613054b41f6dd473a92e7fbe4a54f73f7adbe9d4 lib/Alien/BWIPP.pm
+SHA1 8e6ac356116014589bb9bda00c366c47a9150fcc META.yml
+SHA1 027e0fb09baeb844fbf862e8188466fa0ba08608 README
+SHA1 501f66277a53ffba5097377556a0b72aba705fad lib/Alien/BWIPP.pm
 SHA1 1aba56f7312b270c21d5a31b48550de78e67ba14 share/barcode.ps
 SHA1 ef00330634fa80ccba64d10a7363bbf15e7703e2 t/00-load.t
 SHA1 c65cd0e73eb625650ab125f8c1cdb7840be65459 t/10-generated-class.t
@@ -29,7 +29,7 @@ SHA1 29cc7bb905a8b910527053367d7ac62ed0583c89 t/10-interface.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.12 (GNU/Linux)
 
-iEYEARECAAYFAksiWIYACgkQFtlTdOX00Hrd2gCcCNoQPBI0FGOWg/shI9XtgKQN
-8uMAoKhZ1yl3diDBljUjTy+jUcddpKzp
-=6q2n
+iEYEARECAAYFAksrnrEACgkQFtlTdOX00HpJkgCeN2zjKMrpYg4kMaW1hJdZr80U
+fEAAoITNOv6jIe+GDK+23jzyGkMtMCHH
+=L34p
 -----END PGP SIGNATURE-----
