@@ -11,7 +11,7 @@ use Moose qw(has);
 use MooseX::ClassAttribute qw(class_has);
 use Storable qw(dclone);
 
-our $VERSION = '0.003';
+our $VERSION = '0.004';
 
 has 'barcode_source_handle' => (
     is      => 'rw',
@@ -152,7 +152,7 @@ Alien::BWIPP - Barcode Writer in Pure PostScript
 
 =head1 VERSION
 
-This document describes C<Alien::BWIPP> version C<0.003>. It is based on
+This document describes C<Alien::BWIPP> version C<0.004>. It is based on
 I<Barcode Writer in Pure PostScript> version C<2009-11-15>.
 
 
@@ -240,7 +240,7 @@ C<Alien::BWIPP> requires no configuration files or environment variables.
 
 =head2 Configure time
 
-Perl 5.10, L<Module::Build> >= 0.35_02
+Perl 5.10, L<Module::Build> >= 0.35_14
 
 =head2 Run time
 
