@@ -1,6 +1,12 @@
 =encoding UTF-8
 
-=head1 Revision history for Alien-BWIPP
+=head1 NAME
+
+Changes - Revision history for Alien-BWIPP
+
+=head2 0.004  2009-12-11
+
+increase required Module::Build version
 
 =head2 0.003  2009-12-11
 
